@@ -25,8 +25,6 @@ import java.util.HashMap;
 public class Codegen {
     // file into which generated code is written
     public static PrintWriter p = null;
-    public static HashMap<String, String> stringMap;
-
 
     // values of true and false
     public static final String TRUE = "1";
@@ -41,6 +39,8 @@ public class Codegen {
     public static final String A0 = "$a0";
     public static final String T0 = "$t0";
     public static final String T1 = "$t1";
+    public static final String ZERO = "$zero";
+
 
 
     // for pretty printing generated code
@@ -49,6 +49,18 @@ public class Codegen {
 
     // for generating labels
     private static int currLabel = 0;
+
+    private static HashMap<String, String> stringLitMap;
+
+    public static void init(PrintWriter pw) {
+        p = pw;
+        stringLitMap = new HashMap<>();
+    }
+
+    public static void cleanup() {
+        p.close();
+    }
+
 
 
     // **********************************************************************
@@ -250,14 +262,149 @@ public class Codegen {
     //        L0 L1 L2, etc.
     // **********************************************************************
     public static String nextLabel() {
-        Integer k = new Integer(currLabel++);
+        Integer k = Integer.valueOf(currLabel++);
         String tmp = ".L" + k;
         return(tmp);
     }
-    public static String addVarGlobal(String var) {
-        int size = 4;
-        String res = String.format("\t.data\n\t.align 2\n_%s:\t.space %d\n",
-          var, size);
-        return res;
+
+    // **********************************************************************
+    // genData
+    // given: variable name n
+    // generate:
+    // .data
+    // .align 2
+    // _n: .space 4
+    // **********************************************************************
+    public static void genData(String name) {
+        p.println("\t\t.data");
+        p.println("\t\t.align 2");
+        p.println("_" + name + ":" + (name.length() < 2 ? "\t" : "") + "\t.space 4");
     }
+
+    // Function related
+    private static void genMainPreamble() {
+        p.println("\t\t.text");
+        p.println("\t\t.globl main");
+        p.println("main:");
+        p.println("__start:"); // only for main
+    }
+
+    public static void genFuncPreamble(String f) {
+        if (f.equals("main")) {
+            genMainPreamble();
+        } else {
+            p.println("\t\t.text");
+            p.println("_" + f + ":");
+        }
+    }
+
+    public static void genFuncPrologue(FnSym fnSym) {
+        // # push return address
+        // # push control link
+        // # set $fp
+        // # reserve space for locals
+        genPushRA();
+        genPushControlLink();
+        genSetFpToSpPlus(fnSym.getParamSize() + 8);
+        genReserveStack(fnSym.getLocalSize());
+    }
+
+    public static void genFuncEpilogue(String fnName, String label, FnSym fnSym) {
+        // lw $ra, -<param size>($fp) # load return address
+        // move $t0, $fp # save control link
+        // lw $fp, -<paramsize+4>($fp) # restore FP
+        // move $sp, $t0 # restore SP
+        // jr $ra # return
+        generateLabeled(label, "", "function epilogue");
+        generateIndexed("lw", RA, FP, -fnSym.getParamSize());
+        generate("move", T0, FP);
+        generateIndexed("lw", FP, FP, -(fnSym.getParamSize() + 4));
+        generate("move", SP, T0);
+
+        if (fnName.equals("main")) {
+            genSyscall(10);
+        } else {
+            generate("jr", RA);
+        }
+    }
+
+    private static void genPushRA() {
+        genPush(RA);
+    }
+
+    private static void genPushControlLink() {
+        genPush(FP);
+    }
+
+    private static void genSetFpToSpPlus(int offset) {
+        String comment = "Set FP";
+        generateWithComment("addu", comment, FP, SP, String.valueOf(offset));
+    }
+
+    private static void genReserveStack(int bytes) {
+        String comment = "Reserve space for locals";
+        generateWithComment("subu", comment, SP, SP, String.valueOf(bytes));
+    }
+
+    // literal related
+    public static void genPushLit(int i) {
+        generate("li", T0, String.valueOf(i));
+        genPush(T0);
+    }
+
+    public static void genPushLit(String s) {
+        // Get the label to the string literal
+        String label = stringLitMap.containsKey(s) ? stringLitMap.get(s) : genString(s);
+
+        // Push the address of the literal to the stack
+        generate("la", T0, label);
+        genPush(T0);
+    }
+
+    private static String genString(String s) {
+        String newLabel = nextLabel();
+        p.println("\t\t.data");
+        p.println(newLabel + ":\t.asciiz " + s);
+        stringLitMap.put(s, newLabel);
+        p.println("\t\t.text"); // restart .text
+        return newLabel;
+    }
+
+    public static void genPushLit(boolean b) {
+        String booleanLit = b ? TRUE : FALSE;
+        generate("li", T0, booleanLit);
+        genPush(T0);
+    }
+
+    // system call related
+    public static void genWriteIntSyscall() {
+        genSyscall(1);
+    }
+
+    public static void genWriteBoolSyscall() {
+        genWriteIntSyscall();
+    }
+
+    public static void genWriteStringSyscall() {
+        genSyscall(4);
+    }
+
+    public static void genReadIntSyscall() {
+        genSyscall(5);
+    }
+
+    public static void genReadBoolSyscall() {
+        genReadIntSyscall();
+    }
+
+    private static void genSyscall(int syscallNumber) {
+        generate("li", Codegen.V0, syscallNumber);
+        generate("syscall");
+    }
+
+    // true/false related
+    public static void genFlipOneBit(String reg) {
+        generate("xori", reg, reg, "1");
+    }
+
 }
